--- a/README.html
+++ b/README.html
@@ -30,9 +30,10 @@ to do so for any reason (critical fixes to a previously published basebox).</p>
 
 <p>In addition to the templates for baseboxes intended for public consumption,
 this repository contains templates for largely internal-only use baseboxes.
-This exist as separate templates because some of our internal projects have
+These exist as separate templates because some of our internal projects have
 additional configuration requirements that aren't appropriate or useful for
-public users of OmniOS (e.g. data pools).</p>
+public users of OmniOS (e.g. data pools, slightly higher default memory
+allocations, etc.).</p>
 
 <p>These templates may not be updated for every release of OmniOS, as they are
 typically only built on an as-needed basis.</p>
@@ -42,11 +43,11 @@ typically only built on an as-needed basis.</p>
 <h3>Notes</h3>
 
 <p>In addition to the configurations used by the default/public templates, the
-project specific templates provide the following:</p>
+project specific templates generally provide the following extras:</p>
 
 <ul>
 <li>Additional virtual disk attached to VM</li>
-<li>A second ZFS pootl (data) created using entire disk</li>
+<li>A second ZFS pool (data) created using entire disk</li>
 <li>VM memory increased to 2048MB</li>
 <li>The omniti-perl publisher is added by default</li>
 </ul>
